--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root{
-    --light-color1: #4b320c;
+    --light-color1: #755423;
     --light-color2: #552010;
     --light-color3: #0e0806;
 }
@@ -7,7 +7,7 @@ html{
     box-sizing: border-box;
     font-family:  sans-serif;
     font-weight: 900;
-    color: var(--light-color1);
+    color: var(--light-color3);
 
 }
 .top{
@@ -15,7 +15,8 @@ html{
     grid-template-areas: 
     "party party cta1"
     "party party cta2";
-    gap: -20px;
+    gap: 20px;
+
 }
 body{
     background: linear-gradient(to right, var(--light-color1),var(--light-color2),var(--light-color3) );
@@ -23,16 +24,59 @@ body{
 }
 
 .party{
+    grid-area: party;
+    padding: 20px;
     min-height: 450px;
     background-image: url("../img/hallow.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
     
+}
+.party >*{
+    background: var(--light-color1);
+    padding: 10px;
+    border-radius: 180px;
+
+
+}
+.cta{
+    background-color: var(--light-color1);
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
+
+}
+.cta p{
+    margin: 5px;
 }
 .cta1{
     grid-area: cta1;
 }
 .cta2{
     grid-area: cta2;
+}
+
+@media (max-width: 1000px){
+    .top{
+        grid-template-areas: 
+        "party party"
+        "cta1 cta2";
+    }
+}
+
+@media (max-width:450px)
+{
+    .top{
+        grid-template-areas: 
+        "party"
+        "cta1"
+        "cta2";
+
+    }    
 }
