--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,24 @@
     --light-color2: #552010;
     --light-color3: #0e0806;
 }
+
 html{
     box-sizing: border-box;
     font-family:  sans-serif;
     font-weight: 900;
     color: var(--light-color3);
-
 }
+
 .top{
     display: grid;
     grid-template-areas: 
     "party party cta1"
     "party party cta2";
     gap: 20px;
-
 }
+
 body{
     background: linear-gradient(to right, var(--light-color1),var(--light-color2),var(--light-color3) );
-
 }
 
 .party{
@@ -34,16 +34,15 @@ body{
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: center;
-    
+    justify-content: center;    
 }
+
 .party >*{
     background: var(--light-color1);
     padding: 10px;
     border-radius: 180px;
-
-
 }
+
 .cta{
     background-color: var(--light-color1);
     display: grid;
@@ -52,6 +51,7 @@ body{
     align-content: center;
 
 }
+
 .cta p{
     margin: 5px;
 }
@@ -62,6 +62,16 @@ body{
     grid-area: cta2;
 }
 
+.menu ul{
+    list-style: none;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.menu a{
+    
+}
 @media (max-width: 1000px){
     .top{
         grid-template-areas: 
